--- a/style.css
+++ b/style.css
@@ -735,7 +735,7 @@ opacity: 0;
     /* display: none; */
     position: fixed;
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    transition: opacity .7s ease-in-out;
 }
   .tarjeta.visible {
     /* display: block; */
